objects/LLC_BI__Opportunity_Product__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Is_Product_For_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to differentiate between products added to an object for pricing or if it should display at the object level or strictly on the proforma for pricing</description>
        <label>Is_Product_For_Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity_Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <formula>LLC_BI__Product__r.LLC_BI__Product_Type__r.LLC_BI__Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type__c</fullName>
        <formula>LLC_BI__Product__r.LLC_BI__Product_Type__r.Name</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product__c</fullName>
        <label>Product</label>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Opportunity_Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity_Product</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Opportunity_Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity_Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>